--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,13 @@
 .box{
-  border-width: 4px;
+  border: 4px solid #111E2F;
   border-style: inset;
-  border-color:#111E2F;
   background-color: #bcbfc6;
   text-align: center;
-  position: relative; 
-  top: 400px; 
-  width: 100%;
+  width: 60%;
+  display: block; 
+  margin: auto; 
+  position: fixed; 
+  top: 600px; 
 
 }
 a:hover{
@@ -15,11 +16,30 @@ a:hover{
 .choice {
         background-color: #bcbfc6;
         text-align: center;
-        position: relative; 
+        position: absolute; 
         top: 600px; 
         width: 100%;
         font-family: arial;
         
+}
+.menusel {
+  border: 2px solid #111E2F;
+  text-align: center; 
+  position: relative; 
+  float: right; 
+  background-color: #787D80; 
+}
+div.menusel:hover a {
+  display: block; 
+  border: 2px #111E2F solid; 
+}
+div.menusel a {
+  display: none; 
+  color: black; 
+  width: 10em; 
+}
+div.menusel a:hover {
+  background-color: #9a3324;  
 }
 @-webkit-keyframes swinging{
   0%{transform: rotate(10deg);}
@@ -36,4 +56,8 @@ a:hover{
   animation: swinging 3.5s ease-in-out forwards infinite; 
   -webkit-transfrom-origin: 50% 0; 
   -webkit-animation: swinging 3.5s ease-in-out forwards infinite;  
+}
+
+.ratpic{
+  
 }
