--- a/gamestyle.css
+++ b/gamestyle.css
@@ -54,21 +54,8 @@ body {
     color: rgba(255, 255, 255, 0);
   }
 }
-/* will fix - swinging rope
-.swinging {
-    transform-origin: 50% 0;
-    -webkit-transform-origin: 75% 0;
-    animation: swing 2s ease-in-out forwards infinite; 
-}
-@-webkit-keyframes swing {
-  0%{-webkit-transform: rotate(10deg);}
-  100%{-webkit-transform: rotate(10deg);}
-}
-@keyframes swing {
-    0%{transform: rotate(5deg);}
-    100%{transform: rotate(5deg);}
-}
-*/
+
+
 /* shake animation for unstable room */
 @keyframes shake {
   0% { transform: translate(1px, 1px) rotate(-1deg); }
@@ -106,7 +93,7 @@ body {
     opacity: 0; 
   }
 }
-/* animation making rocks disappear */
+/* animation making rocks fall all the way through */
 @keyframes fallend {
   from {
     top: -50%;
@@ -118,6 +105,17 @@ body {
     transition: opacity 5s ease;
     opacity: 1; 
   }
+}
+/* animation and transforms for dangling rope*/
+@keyframes swing {
+   0% { transform: rotate(15deg); } 
+   50% { transform: rotate(-10deg); } 
+   100% { transform: rotate(15deg); }  
+}
+@-webkit-keyframes swing {
+  0%{webkit-transform: rotate(15deg);}
+  50%{-webkit-transform: rotate(-10deg);}
+  100%{-webkit-transform: rotate(15deg);}
 }
 /* .title, .jail, .break, go to title.html.  */
 .title {
@@ -320,7 +318,25 @@ body {
 .rope1 {
   background-image: url("rope.jpg");
   background-size: cover;
+  display: flex;
 }
+.rope1:hover {
+  animation: climb 1.5s;
+  animation-iteration-count: 1;
+}
+@keyframes climb {
+  0% {
+    transform: scale(1,1);
+  }
+  50% {
+    transform-origin: top;
+    transform: scale(3,3);
+  }
+  100% {
+    transform: scale(1,1);
+  }
+}
+
 .hallway1 {
   background-image: url("hallway.jpg");
   background-size: cover;
@@ -332,10 +348,10 @@ body {
   animation-name: shake; 
   animation-duration: infinite; 
 }
-/* duration for shake animation when hovering */
+/* duration for shake when hovering */
 .fallthrough:hover{
   animation: shake 10s; 
-  animation-iteration-count: 5; 
+  animation-iteration-count: infinite; 
 }
 /* properties for closed cell */
 .closedcell {
@@ -344,12 +360,19 @@ body {
   }
 /* properties for dangling rope in hall */
 .rope {
-  height: 125px;
-  width: 125px;
+  height: 200px;
+  width: 75px;
   display: block; 
   margin: auto; 
   position: relative; 
+  -webkit-transform-origin: 50% 0;
+  transform-origin: 50% 0;
+  -webkit-animation: swing ease-in-out forwards;
+  animation: swing ease-in-out forwards; 
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
 }
+
 /* properties for falling rubble */
 .rubble {
   height: 120px;
@@ -376,26 +399,49 @@ body {
   animation-duration: 5s;
   animation-iteration-count: 1; 
 }
-
+/*this will control moving rat*/
 .rat{
-  transform:translate(50px);
+  position:absolute;
+  animation-name:mover;
+  animation-duration:10s;
+  animation-iteration-count: infinite;
+  animation-timing-function:linear;
+  transition-delay:2s;
+ 
 }
+/*moves the rat to the right*/
+@keyframes mover{
+from{
+  right:50%;
+  opacity:0;
+}
+to{
+  right:0%;
+  opacity:1;
+}
+
+}
+/*properties for right */
 .darkjail{
   background-image: url("darkfloor.jpeg");
   background-size:cover;
 }
+/*properties for followrats */
 .sewer{
   background-image:url("sewer.jpeg");
   background-size:cover;
+  
 }
+/* properties for onexit*/
 .drain{
   background-image:url("drain.jpeg");
   background-size:cover;
 }
+/*used for textbox with only one option */
 .center{
   position: absolute;
   left:35%;
-  bottom:50%;
+  bottom:45%;
 }
 
 
@@ -481,4 +527,26 @@ background-image: url("riot.jpg");
 .ex2{
 background-image: url("field.jpg");
   background-size: cover; 
+}
+/*raindrop propeties*/
+.raindrop{
+  animation-name:raining;
+  animation-iteration-count:infinite;
+  animation-timing-function: ease;
+  animation-duration:20s;
+  position:relative;
+  display:block;
+ margin:auto;
+  
+}
+/*makes it rain*/
+@keyframes raining{
+  from{
+    bottom:50%;
+    opacity:0;
+  }
+  to{
+    bottom:-22%;
+    opacity:1;
+  }
 }
