--- a/css/gamestyle.css
+++ b/css/gamestyle.css
@@ -234,14 +234,12 @@ body {
   max-height: 30%;
   overflow: auto;
 }
-/* @media screen and (max-width: 700px) {
-  .box {
-    width: 70%;
-  }
-  .popup {
-    width: 70%;
-  }
-} */
+#link {
+  color: rgb(0 174 174);
+}
+#link:hover{
+  color: rgb(128 0 0);
+}
 /* css code for the play button */
 .play {
   position: absolute;
